# chess-roboticV2

./: .gitignore  .pre-commit-config.yaml  README.md  __main__.py  chess_robotic.py  orchestrator.py  pyproject.toml  requirements-lock.txt  system_factory.py  test_results.txt
board_state/: __init__.py  board_model.py  dgt_adapter.py
board_state/tests/: test_board_model.py
calibration/: __init__.py  calibrator.py  transform_manager.py
calibration/tests/: test_calibrator.py  test_transform_manager.py
chess_core/: __init__.py  engine.py  game_manager.py  interfaces.py  move_parser.py
chess_core/tests/: test_move_parser.py
config/: default.yaml
config/board/: standard_board.yaml
config/hardware/: franka_fr3.yaml  gantry.yaml  so100.yaml  ur3e.yaml  xarm6.yaml
config/learning/: grasp_rl.yaml
config/perception/: camera_rgb.yaml
docs/: architecture.md  bench_test_plan.md  bom.md  calibration_guide.md  environment_baseline.md  frame_conventions.md  gantry_vs_arm.md  hardware_setup.md  rl_guide.md  wsl2_setup.md
execution/: __init__.py  executor.py  hardware_bridge.py  safety_supervisor.py
execution/tests/: __init__.py  test_executor.py
firmware/: PROTOCOL.md  README.md  chess_robot_pico.ino  platformio.ini
learning/: __init__.py  eval_harness.py  heuristic_baselines.py  interfaces.py
learning/datasets/: __init__.py  collector.py
learning/envs/: __init__.py  grasp_env.py  placement_env.py  rewards.py
learning/scripts/: train_grasp_policy.py
learning/tests/: test_grasp_env.py  test_placement_and_eval.py
learning/training/: __init__.py  trainer.py
manipulation/: __init__.py  failure_classifier.py  grasp_policy.py  pick_place.py
motion_planning/: __init__.py  moveit2_planner.py  planner_interface.py
motion_planning/tests/: __init__.py  test_moveit2_planner.py
perception/: __init__.py  board_detector.py  camera_interface.py  move_verifier.py  perception_manager.py  piece_classifier.py  piece_detector.py
perception/tests/: __init__.py  test_perception.py
robot_model/: __init__.py  arm_interface.py  collision_world.py  gantry_driver.py  xarm6_driver.py
robot_model/tests/: __init__.py  test_xarm6_driver.py
scripts/: demo_e2e4_pybullet.py  evaluate_policies.py  run_first_training.py  train_classifier.py
simulation/: __init__.py  gantry_sim_adapter.py  pybullet_arm.py  scene_builder.py
simulation/tests/: __init__.py  test_pybullet_arm.py
tests/: test_cli.py  test_system_factory.py
tests/hardware/: test_protocol_smoke.py
tests/integration/: test_move_e2e4_sim.py  test_orchestrator.py
ui_tools/: __init__.py  board_display.py  telemetry_viewer.py
ui_tools/tests/: __init__.py  test_ui_tools.py
