[build-system]
requires = ["setuptools~=82.0", "wheel~=0.46"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-robotic"
version = "0.2.0"
description = "Chess-playing robotic arm/gantry with CV, classical manipulation, and optional RL"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Chess Robotic Team"},
]

dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "python-chess>=1.10",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "scipy>=1.10",
    "transforms3d>=0.4",
]

[project.optional-dependencies]
sim = [
    "pybullet>=3.2",
]
learning = [
    "torch>=2.0",
    "torchvision>=0.15",
    "stable-baselines3>=2.0",
    "gymnasium>=0.29",
    "tensorboard>=2.14",
    "wandb>=0.15",
]
hardware = [
    "pyserial>=3.5",
]
mlops = [
    "mlflow>=2.8",
    "hydra-core>=1.3",
    "optuna>=3.4",
]
monitoring = [
    "structlog>=23.0",
    "gradio>=4.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]
all = [
    "chess-robotic[sim,learning,hardware,mlops,monitoring,dev]",
]

[tool.setuptools.packages.find]
include = [
    "chess_core*",
    "board_state*",
    "perception*",
    "calibration*",
    "robot_model*",
    "motion_planning*",
    "manipulation*",
    "execution*",
    "simulation*",
    "learning*",
    "ui_tools*",
    "mlops*",
    "benchmarks*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "chess_core/tests",
    "board_state/tests",
    "perception/tests",
    "calibration/tests",
    "robot_model/tests",
    "motion_planning/tests",
    "manipulation/tests",
    "execution/tests",
    "simulation/tests",
    "learning/tests",
    "ui_tools/tests",
]
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
